Debug for the top-part layout issue

--- a/source/stylesheets/all.css
+++ b/source/stylesheets/all.css
@@ -4,7 +4,7 @@
   background-color: #16A085;
   width: 100%;
   /*height: 25em;*/
-  height: 15em;
+  /*height: 15em;*/
 }
 
 .date-area {
